@@ -4,7 +4,9 @@
 * Add controller mapping for Hercules DJControl Jogvision #2370
 * Fix missing manual in deb package lp:1889776
 * Fix caching of duplicate tracks that reference the same file #3027
-* Fix loss of precision when dealing with floating-point sample positions while setting loop out position and seeking using vinyl control #3126 #3127
+* Fix loss of precision when dealing with floating-point sample 
+  positions while setting loop out position and seeking using vinyl control #3126 #3127
+* Fix possible memory corruption using JACK on Linux 
 
 ==== 2.2.4 2020-05-10 ====
 
